Tweaks to work with orion.web
define api's in the asspsettings file
allow per environ appsettings
a few more logging calls
ignore ssl errors when we are just hitting loopback address

--- a/cron.api.invocation/appsettings.json
+++ b/cron.api.invocation/appsettings.json
@@ -7,10 +7,16 @@
     }
   },
   "ServiceSettings": {
-    "AuthUrl": "",
-    "ServiceUrl": "",
+    "AuthUrl": "https://127.0.0.1:5001/api/token",
     "Cron": "*/1 * * * *",
     "ClientId": "",
-    "ClientSecret": ""
+    "ClientSecret": "",
+    "Targets": [
+      {
+        "Method": "GET",
+        "Uri": "https://127.0.0.1:5001/api/test",
+        "Body":  null
+      }
+    ]
   }
 }
