--- a/cron.api.invocation/Properties/launchSettings.json
+++ b/cron.api.invocation/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "orion.service": {
+    "cron.api.invocation": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
