--- a/cron.api.invocation/cron.api.invocation.csproj
+++ b/cron.api.invocation/cron.api.invocation.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="3.1.9" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 </Project>
