tweak timing for 15 minutes

--- a/cron.api.invocation/appsettings.json
+++ b/cron.api.invocation/appsettings.json
@@ -8,15 +8,8 @@
   },
   "ServiceSettings": {
     "AuthUrl": "https://127.0.0.1:5001/api/token",
-    "Cron": "*/1 * * * *",
+    "Cron": "*/15 * * * *",
     "ClientId": "",
-    "ClientSecret": "",
-    "Targets": [
-      {
-        "Method": "GET",
-        "Uri": "https://127.0.0.1:5001/api/test",
-        "Body":  null
-      }
-    ]
+    "ClientSecret": ""
   }
 }
